--- a/readme
+++ b/readme
@@ -1,9 +1,10 @@
+```markdown
 # Attention Enhanced Residual Dilated Fusion Encoder-Decoder Network for Autonomous Vehicle Multitasking
-
 
 ## 🚀 Requirements
 
-Make sure you have the required dependencies installed:
+Install the required dependencies:
+
 ```bash
 pip install -r requirements.txt
 ```
@@ -12,59 +13,65 @@ pip install -r requirements.txt
 
 ## 📂 Data Preparation
 
-1. **Download images** from [BDD100K Dataset](https://bdd-data.berkeley.edu/).
+1. **Download images** from the [BDD100K Dataset](https://bdd-data.berkeley.edu/).
 2. **Download annotations**:
    - Drivable Area Segmentation: [Google Drive](https://drive.google.com/file/d/1xy_DhUZRHR8yrZG3OwTQAHhYTnXn7URv/view?usp=sharing)
    - Lane Line Segmentation: [Google Drive](https://drive.google.com/file/d/1lDNTPIQj_YLNZVkksKM25CvCHuquJ8AP/view?usp=sharing)
 
-### **Dataset Structure**
-```bash
-/data
-    bdd100k
-        images
-            train/
-            val/
-            test/
-        segments
-            train/
-            val/
-        lane
-            train/
-            val/
+### Dataset Structure
+
+```
+data/
+├── bdd100k/
+│   ├── images/
+│   │   ├── train/
+│   │   ├── val/
+│   │   └── test/
+│   ├── segments/
+│   │   ├── train/
+│   │   └── val/
+│   └── lane/
+│       ├── train/
+│       └── val/
 ```
 
+---
 
+## 🚋 Training
 
-## Training
-Train the model using the command:
+Train the model:
+
 ```bash
 python3 train.py
 ```
 
 ---
 
-## Testing
-Evaluate the model performance using:
+## ✅ Testing
+
+Evaluate model performance:
+
 ```bash
 python3 val.py
 ```
 
 ---
 
-##  Inference
-Perform inference on images:
+## 🔍 Inference
+
+Run inference on images:
+
 ```bash
 python3 test_image.py
 ```
 
 ---
 
+## 🙏 Acknowledgment
 
-##  Acknowledgment
 This work is inspired by:
+
 - [ESPNet](https://github.com/sacmehta/ESPNet)
 - [YOLOP](https://github.com/hustvl/YOLOP)
-
----
-
-
+```
+```
